# integral-philosophy

./: .gitignore  .gitmodules  .latexmkrc  BEAUTIFUL_TRANSFORMATION_COMPLETE.md  Dockerfile  FINAL_TEST_REPORT.md  GEMINI.md  Makefile  NEOALLUNITY_README.md  ORG_README.md  PROGRESS_REPORT.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SUBPROJECTS_PLAN.md  TESTING_REPORT.md  api_requirements.txt  build.py  build.sh  convert.sh  descartes_epistemology.xml  do.sh  final_test.adoc  final_test.dbk  final_test.html  final_test.jats  final_test.json  final_test.md  final_test.org  final_test.rst  final_test.tex  final_test.typst  final_test.xml  generate_docs.py  global-bibliography.bib  index.ast.json  journal.yml  main.py  metadata.yml  performance_report.json  (+32 more)
.github/workflows/: build.yml
articles/: do.sh  template.tex
articles/krasheninnikov/: main.tex
articles/lugowska/: deepseek_latex_20260114_5a3086.tex
articles/moiseev/: references.bib
articles/podzolkova/: main.tex
articles/safonov/: main.tex
articles/smolyanova/: main.tex
backmatter/: authors.tex
build-systems/: Taskfile.yaml
build-systems/autotools/: Makefile.am  autotools  bootstrap  configure.ac
build-systems/autotools/autom4te.cache/: output.0  traces.0
build-systems/autotools/build-aux/: Makefile  Makefile.am  Makefile.in
build-systems/cmake/: CMakeLists.txt
build-systems/make/: Makefile.in
build-systems/scons/: README.autotools.md  README.scons.md  SConscript  SConscript-config  SConstruct  scons-helper
cfg/: cfg-articles.tex  cfg-bibliography.tex  cfg-editorial.tex  cfg-floats.tex  cfg-glossary-index.tex  cfg-headers.tex  cfg-links.tex  cfg-math.tex  cfg-metadata.tex.0  cfg-semantic.tex  cfg-structure.tex
chapters/: 00-titlepage.tex  01-foreword.tex  02-abstracts-eng.tex  03-article-author1.tex  04-article-author2.tex  05-article-author3.tex  100-lastpage.tex  98-lists.tex  99-authors.tex
config/cfg/: cfg-brand.tex  cfg-fonts.tex  cfg-macros.tex  cfg-metadata.tex  cfg-metadata_common.tex  cfg-typography.tex
config/pipelines/: default.yaml
content_pipeline/01_scraped/: site_ast.json
content_pipeline/02_parsed/: DOCS.ast.json  DOCS_%D0%94%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D0%B8%D0%B8.ast.json  DOCS_%d0%98%d0%bd%d1%81%d1%82%d0%b8%d1%82%d1%83%d1%82%20%d0%b8%d0%bd%d1%82%d0%b5%d0%b3%d1%80%d0%b0%d0%bb%d1%8c%d0%bd%d0%be%d0%b9%20%d0%bd%d0%b0%d1%83%d0%ba%d0%b8.ast.json  DOCS_%d0%9a%d0%be%d0%bd%d1%81%d0%bf%d0%b5%d0%ba%d1%82%d1%8b.ast.json  DOCS_%d0%9b%d0%b0%d0%b1%d0%be%d1%80%d0%b0%d1%82%d0%be%d1%80%d0%b8%d0%b8.ast.json  DOCS_%d0%9b%d0%b0%d0%b1%d0%be%d1%80%d0%b0%d1%82%d0%be%d1%80%d0%b8%d1%8f%20%d0%98%d1%81%d1%82%d0%be%d1%80%d0%b8%d0%b8.ast.json  DOCS_%d0%9b%d0%b0%d0%b1%d0%be%d1%80%d0%b0%d1%82%d0%be%d1%80%d0%b8%d1%8f%20%d0%9c%d0%b0%d1%82%d0%b5%d0%bc%d0%b0%d1%82%d0%b8%d0%ba%d0%b8.ast.json  DOCS_%d0%9b%d0%b0%d0%b1%d0%be%d1%80%d0%b0%d1%82%d0%be%d1%80%d0%b8%d1%8f%20%d0%a4%d0%b8%d0%bb%d0%be%d1%81%d0%be%d1%84%d0%b8%d1%8f%20%d0%bf%d1%80%d0%b0%d0%b2%d0%b0.ast.json  (+47 more)
descartes_output/: document.epub
descartes_uml/: site_structure.dot  site_structure.mmd  uml_data.json
docs/: ANALYSIS.md  API_REFERENCE.md  BIBLIOGRAPHY.md  CONTENT_PIPELINE.md  DEPLOYMENT_GUIDE.md  DOXYGEN_SUCCESS.md  Doxyfile  EXTENDED_VALIDATION_COMPLETE.md  FINAL_COMPLETION_REPORT.md  FINAL_SYSTEM_STATUS.md  HASKELL_IMPLEMENTATION_COMPLETE.md  HASKELL_PORT_COMPLETE.md  INTEGRATION.md  LATEX_ANALYSIS_COMPLETE.md  MAKEFILE-CHEATSHEET.md  MAKEFILE-PHILOSOPHY.md  MAKEFILE-USAGE.md  PERFORMANCE_TESTING_SUMMARY.md  PROGRESS_REPORT.md  RECONSTRUCTION_SUMMARY.md  REORGANIZATION_SUMMARY.md  REST_API_DOCUMENTATION.md  STRUCTURE.md  TEX-POLICY.md  USAGE-EDITORIAL.md  VALIDATION_SYSTEM_REPORT.md  VENV_SETUP.md  WARNINGS_FIXED_REPORT.md  WEB_INTERFACE_GUIDE.md
frontmatter/: editorial-info.tex  preface-en.tex  preface-ru.tex  toc.tex
haskell-project/: fixed.hs  integral-philosophy.cabal  minimal.hs  package.yaml  simple.hs  stack.yaml  working.hs
images/: header.html  image021.emz  image022.emz  image023.emz  image024.emz  image025.emz  image026.emz  image027.emz  image028.emz  image029.emz  image030.emz  image031.emz  image032.emz  image033.emz  image034.emz  image035.emz  image036.emz  image037.emz  image038.emz  image039.emz  image040.emz  image041.emz  image042.emz  image043.emz  image044.emz  image045.emz  image046.emz  image047.emz  image048.emz  image049.emz  image050.emz  image051.emz  image052.emz  image053.emz  image054.emz  image055.emz  image056.emz  image057.emz  image058.emz  image059.emz  (+86 more)
legacy/: .coverage  .sconsign.dblite  configure~  help  pyproject.toml
legacy/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
quick_start_test.puml/: site_structure.puml
real_test/: site_ast.json  sitemap.txt
scraped_content/: site_ast.json  sitemap.txt
scripts/: final_validation.py  generate-metadata.py  generate_docs.py  global-bibliography.bib  haskell-project.yaml  journal.cls  latex_to_markdown.py  main.tex  performance_test.py  quick_reconstruction.py  references.bib  simple_validate.py  test.tex  test_fixes.py  test_validator_structure.py  update_build_systems.py  verify_all_validators.py
src/: Makefile  Makefile.am  Makefile.in
stanford_test/: sitemap.txt
styled_output/: document.html
test_transform_script/: document.html
test_uml/: site_structure.dot  site_structure.puml  uml_data.json
test_uml_script/: site_structure.mmd
test_website/: index.md  site_ast.json
tests/: PHASE1_TEST_IMPLEMENTATION.md  README.md  requirements.txt  run_comprehensive_tests.py  test_edge_cases.py  test_example_infrastructure.py  test_integration_comprehensive.py  test_performance.py  test_validation_system.py
validators/: __init__.py  batch_processor.py  content_integrity.py  docx_validator.py  epub3_validator.py  internationalization.py  ml_quality_predictor.py  pdf_validator.py  performance_benchmark.py  quality_dashboard.py  quality_report.py  security_scanner.py  validators.py  wcag_validator.py
xslt/: tei_to_docx.xslt  tei_to_epub.xslt  tei_to_html.xslt  tei_to_latex.xslt
(+1520 files in other folders)
